data/derived/sp14/progs/unify/prog1789.ml.out
Characters 82-96:
  | Sine s -> buildSine( s );;
              ^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit -> expr
